# microservice

./: README.md  start_services.py  start_services.rb  start_services.sh
actix_microservice/: Cargo.toml
actix_microservice/src/: db.rs  main.rs  property.rs  rabbitmq.rs  router.rs
gin_microservice/: go.mod  go.sum  main.go
gin_microservice/db/: db.go
gin_microservice/rabbitmq/: rabbitmq.go
gin_microservice/user/: router.go  user.go
